--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2642,7 +2642,7 @@ input, select, textarea {
 			margin: 0 0 1em 0;
 			width: 6.25em;
 		}
-
+		
 /* Footer */
 
 	#footer .icons {
@@ -2813,7 +2813,7 @@ input, select, textarea {
 			}
 
 		.poptrox-popup .caption {
-			background: #fff;
+			background: #a050b2;
 			bottom: 0;
 			cursor: default;
 			font-size: 0.9em;
@@ -2859,7 +2859,7 @@ input, select, textarea {
 
 			.poptrox-popup .nav-next:before,
 			.poptrox-popup .nav-previous:before {
-				color: #fff;
+				color: red;
 				font-size: 2.5em;
 				height: 1em;
 				line-height: 1em;
