Clients Added and cloud adress for cv

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2824,6 +2824,7 @@ input, select, textarea {
 			text-align: center;
 			width: 100%;
 			z-index: 1;
+			color: #fff;
 		}
 
 		.poptrox-popup .nav-next,
